WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98875
NEON intrinsics Gauss filter does not work properly
https://bugs.webkit.org/show_bug.cgi?id=98875
Summary
NEON intrinsics Gauss filter does not work properly
Gabor Rapcsanyi
Reported
2012-10-10 00:48:26 PDT
NEON intrinsics Gauss filter does not work properly
Attachments
proposed patch
(3.18 KB, patch)
2012-10-10 01:08 PDT
,
Gabor Rapcsanyi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabor Rapcsanyi
Comment 1
2012-10-10 01:08:27 PDT
Created
attachment 167950
[details]
proposed patch The stride parameter was missing from the algorithm. I made a pixel check and now its working properly with this fix.
WebKit Review Bot
Comment 2
2012-10-10 01:11:42 PDT
Attachment 167950
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/graphics/filters/arm/FEGaussianBlurNEON.h:40: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zoltan Herczeg
Comment 3
2012-10-16 00:17:53 PDT
Comment on
attachment 167950
[details]
proposed patch fix the spaces, and r=me
Zoltan Herczeg
Comment 4
2012-10-16 00:18:29 PDT
And perhaps a little more explanation in the changelog.
Gabor Rapcsanyi
Comment 5
2012-10-17 01:10:23 PDT
(In reply to
comment #4
)
> And perhaps a little more explanation in the changelog.
Thanks, I've added some more to it. Patch landed:
http://trac.webkit.org/changeset/131562
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug