NEON intrinsics Gauss filter does not work properly https://bugs.webkit.org/show_bug.cgi?id=98875

Reviewed by Zoltan Herczeg.

Fixing the NEON intrinsics Gauss filter. The stride parameter
was missing from the intrinsics algorithm. Tested with pixel
checks, now it's working properly.

* platform/graphics/filters/arm/FEGaussianBlurNEON.h:
(WebCore::boxBlurNEON):



Canonical link: https://commits.webkit.org/117519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131562 268f45cc-cd09-0410-ab3c-d52691b4dbfc